buildscript {
    repositories {
        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
    }
    dependencies {
        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
    }
}

plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
}

apply plugin: 'org.spongepowered.mixin'

version = mod_version
group = mod_group_id

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

mixin {
    add sourceSets.main, 'sfgame.refmap.json'
    config 'sfgame.mixins.json'
}

minecraft {
    mappings channel: mapping_channel, version: mapping_version
    copyIdeResources = true

    runs {
        configureEach {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'info'
            // TACZ ships production (SRG) mixin refmaps. Forge userdev uses named
            // mappings, so IDEA/Gradle runs must remap dependency refmaps at launch.
            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }

        client {}

        server {
            args '--nogui'
        }

        gameTestServer {
            property 'forge.enabledGameTestNamespaces', mod_id
        }
    }
}

repositories {
    maven {
        name = 'CurseMaven'
        url = 'https://www.cursemaven.com'
        content {
            includeGroup 'curse.maven'
        }
    }
}

configurations {
    taczDevRuntime
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
    // The mapped dependency is used for compilation and copied into run/mods
    // for IDEA. It must not also appear on the runtime classpath as a duplicate mod.
    def taczCoordinate = "curse.maven:timeless-and-classics-zero-${tacz_project_id}:${tacz_file_id}"
    compileOnly fg.deobf(taczCoordinate)
    taczDevRuntime fg.deobf(taczCoordinate)
    testImplementation platform('org.junit:junit-bom:5.10.2')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

def installTaczForRuns = tasks.register('installTaczForRuns', Copy) {
    group = 'forgegradle runs'
    description = 'Copies the mapped TACZ development jar into run/mods for IDEA and Gradle runs.'
    from configurations.taczDevRuntime
    into layout.projectDirectory.dir('run/mods')
    rename { "tacz-${tacz_file_id}-dev-mapped.jar" }
}

tasks.matching { it.name in ['prepareRunClientCompile', 'prepareRunServerCompile', 'prepareRunGameTestServerCompile'] }
        .configureEach {
            // IDEA launches the generated Application configuration directly. After
            // `clean`, its legacy classpath and SRG-to-MCP remap files no longer
            // exist, so rebuild the Forge run metadata before starting Java.
            dependsOn 'genIntellijRuns'
            dependsOn installTaczForRuns
        }

tasks.named('test', Test).configure {
    useJUnitPlatform()
}

tasks.named('processResources', ProcessResources).configure {
    def replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            forge_version          : forge_version,
            forge_version_range    : forge_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description
    ]
    inputs.properties replaceProperties
    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties
    }
}

tasks.named('jar', Jar).configure {
    manifest {
        attributes([
                'Specification-Title'     : mod_id,
                'Specification-Vendor'    : mod_authors,
                'Specification-Version'   : '1',
                'Implementation-Title'    : project.name,
                'Implementation-Version'  : project.jar.archiveVersion,
                'Implementation-Vendor'   : mod_authors,
                'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                'MixinConfigs'             : 'sfgame.mixins.json'
        ])
    }
    finalizedBy 'reobfJar'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}
